--- a/HomeManager/Resources/StylesDictionary.xaml
+++ b/HomeManager/Resources/StylesDictionary.xaml
@@ -277,7 +277,7 @@
     <Style x:Key="UploadPersoonButton" TargetType="ContentControl">
         <Setter Property="Cursor" Value="Hand" />
         <Setter Property="Height" Value="31" />
-        <Setter Property="Width" Value="31" />   
+        <Setter Property="Width" Value="31" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="ContentControl">
@@ -332,11 +332,11 @@
                         BorderThickness="1"
                         CornerRadius="15">
                         <Path
-                        Width="15"
-                        Height="15"
-                        Data="{StaticResource myShowfile}"
-                        Fill="{StaticResource myTitleBar}"
-                        Stretch="Fill" />
+                            Width="15"
+                            Height="15"
+                            Data="{StaticResource myShowfile}"
+                            Fill="{StaticResource myTitleBar}"
+                            Stretch="Fill" />
                     </Border>
                 </ControlTemplate>
             </Setter.Value>
@@ -359,15 +359,92 @@
                         CornerRadius="15">
 
                         <Path
-                        Width="15"
-                        Height="15"
-                        Data="{StaticResource myDeleteButton}"
-                        Fill="{StaticResource myTitleBar}"
-                        Stretch="Fill" />
+                            Width="15"
+                            Height="15"
+                            Data="{StaticResource myDeleteButton}"
+                            Fill="{StaticResource myTitleBar}"
+                            Stretch="Fill" />
                     </Border>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
     </Style>
+
+    <Style x:Key="Excel" TargetType="ContentControl">
+        <Setter Property="Cursor" Value="Hand" />
+        <Setter Property="Height" Value="31" />
+        <Setter Property="Width" Value="31" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="ContentControl">
+                    <Border
+                        Width="30"
+                        Height="30"
+                        Background="{StaticResource myBackground}"
+                        BorderBrush="{StaticResource myTitleBar}"
+                        BorderThickness="1"
+                        CornerRadius="15">
+
+                        <Path
+                            Width="15"
+                            Height="15"
+                            Data="{StaticResource myExcel}"
+                            Fill="{StaticResource myTitleBar}"
+                            Stretch="Fill" />
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <!--  TEXTBLOCK  -->
+
+    <Style TargetType="TextBlock">
+        <Setter Property="Foreground" Value="#024f87" />
+    </Style>
+
+    <!--  LISTVIEW  -->
+
+    <Style TargetType="ListView">
+        <Setter Property="Foreground" Value="#024f87" />
+    </Style>
+
+    <!--  LISTBOX  -->
+    <Style TargetType="ListBox">
+        <Setter Property="Foreground" Value="#024f87" />
+    </Style>
+
+    <!--  LABEL  -->
+    <Style TargetType="Label">
+        <Setter Property="Foreground" Value="#024f87" />
+    </Style>
+
+    <!--  TEXTBOX  -->
+    <Style TargetType="TextBox">
+        <Setter Property="Foreground" Value="#024f87" />
+    </Style>
+
+    <!--  DATEPICKER  -->
+    <Style TargetType="DatePicker">
+        <Setter Property="Foreground" Value="#024f87" />
+    </Style>
+
+    <!--  COMBOBOX  -->
+    <Style TargetType="ComboBox">
+        <Setter Property="Foreground" Value="#024f87" />
+    </Style>
+
+    <!--  BUTTON  -->
+    <Style TargetType="Button">
+        <Setter Property="Foreground" Value="#024f87" />
+    </Style>
+
+    <!--  GRIDCOLUMN  -->
+    <Style TargetType="DataGridCell">
+        <Setter Property="Foreground" Value="#024f87" />
+    </Style>
+
+
+
 
 </ResourceDictionary>
