--- a/HomeManager/View/Budget/ucBegunstigden.xaml
+++ b/HomeManager/View/Budget/ucBegunstigden.xaml
@@ -48,12 +48,12 @@
             </Grid>
         </Border>
         <Border
-     Grid.Row="1"
-     Grid.Column="0"
-     Margin="3"
-     BorderBrush="Black"
-     BorderThickness="1"
-     CornerRadius="5">
+            Grid.Row="1"
+            Grid.Column="0"
+            Margin="3"
+            BorderBrush="Black"
+            BorderThickness="1"
+            CornerRadius="5">
             <Grid Grid.Row="1">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
@@ -73,51 +73,81 @@
                     <RowDefinition Height="*" />
 
                 </Grid.RowDefinitions>
+
+                <StackPanel
+                    Grid.Row="1"
+                    Grid.Column="1"
+                    HorizontalAlignment="Left"
+                    Orientation="Horizontal">
+                    <TextBox
+                        Width="150"
+                        Margin="5"
+                        HorizontalAlignment="Right"
+                        Text="{Binding FilterTekst, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                    <Button Command="{Binding cmdFilter}" Cursor="Hand">
+                        <Button.Template>
+                            <ControlTemplate>
+                                <Border Background="{StaticResource myBackground}">
+
+                                    <Path
+                                        Width="20"
+                                        Height="20"
+                                        Margin="5"
+                                        Data="{StaticResource myFilterButton}"
+                                        Fill="{StaticResource myTitleBar}"
+                                        Stretch="Fill" />
+
+                                </Border>
+                            </ControlTemplate>
+                        </Button.Template>
+                    </Button>
+                </StackPanel>
+
                 <ListBox
-                Name="BegunstigdeListView"
-                Grid.Row="1"
-                Grid.RowSpan="5"
-                Grid.Column="1"
-                Width="150"
-                Margin="5"
-                Foreground="#024f87"
-                ItemsSource="{Binding MijnCollectie}"
-                SelectedIndex="{Binding MijnSelectedItem.MijnSelectedIndex, Mode=Twoway}"
-                SelectedItem="{Binding MijnSelectedItem, UpdateSourceTrigger=PropertyChanged}" />
+                    Name="BegunstigdeListView"
+                    Grid.Row="2"
+                    Grid.RowSpan="5"
+                    Grid.Column="1"
+                    Width="150"
+                    Margin="5"
+                    HorizontalAlignment="Left"
+                    Foreground="#024f87"
+                    ItemsSource="{Binding GefilterdeCollectie}"
+                    SelectedItem="{Binding MijnSelectedItem, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
 
                 <Label
-                Grid.Row="1"
-                Grid.Column="3"
-                HorizontalAlignment="Right"
-                HorizontalContentAlignment="Right"
-                Content="Begunstigde"
-                Foreground="#024f87" />
+                    Grid.Row="2"
+                    Grid.Column="3"
+                    HorizontalAlignment="Right"
+                    HorizontalContentAlignment="Right"
+                    Content="Begunstigde"
+                    Foreground="#024f87" />
                 <TextBox
-                x:Name="txtBegunstigde"
-                Grid.Row="1"
-                Grid.Column="4"
-                Width="200"
-                Margin="5"
-                Background="White"
-                Foreground="#024f87"
-                Text="{Binding MijnSelectedItem.Begunstigde, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" />
+                    x:Name="txtBegunstigde"
+                    Grid.Row="2"
+                    Grid.Column="4"
+                    Width="200"
+                    Margin="5"
+                    Background="White"
+                    Foreground="#024f87"
+                    Text="{Binding MijnSelectedItem.Begunstigde, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" />
                 <Label
-                x:Name="Opmerking"
-                Grid.Row="2"
-                Grid.Column="3"
-                HorizontalContentAlignment="Right"
-                Content="Opmerking"
-                Foreground="#024f87" />
+                    x:Name="Opmerking"
+                    Grid.Row="3"
+                    Grid.Column="3"
+                    HorizontalContentAlignment="Right"
+                    Content="Opmerking"
+                    Foreground="#024f87" />
                 <TextBox
-                Grid.Row="2"
-                Grid.Column="4"
-                Width="200"
-                Height="100"
-                Margin="5"
-                VerticalAlignment="Center"
-                Background="White"
-                Foreground="#024f87"
-                Text="{Binding MijnSelectedItem.Opmerking, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" />
+                    Grid.Row="3"
+                    Grid.Column="4"
+                    Width="200"
+                    Height="100"
+                    Margin="5"
+                    VerticalAlignment="Center"
+                    Background="White"
+                    Foreground="#024f87"
+                    Text="{Binding MijnSelectedItem.Opmerking, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" />
 
 
             </Grid>
