--- a/HomeManager/View/Budget/ucCategorie.xaml
+++ b/HomeManager/View/Budget/ucCategorie.xaml
@@ -48,12 +48,12 @@
             </Grid>
         </Border>
         <Border
-     Grid.Row="1"
-     Grid.Column="0"
-     Margin="3"
-     BorderBrush="Black"
-     BorderThickness="1"
-     CornerRadius="5">
+            Grid.Row="1"
+            Grid.Column="0"
+            Margin="3"
+            BorderBrush="Black"
+            BorderThickness="1"
+            CornerRadius="5">
             <Grid Grid.Row="1">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
@@ -73,34 +73,62 @@
                     <RowDefinition Height="*" />
 
                 </Grid.RowDefinitions>
+                <StackPanel
+                    Grid.Row="1"
+                    Grid.Column="1"
+                    HorizontalAlignment="Left"
+                    Orientation="Horizontal">
+                    <TextBox
+                        Width="150"
+                        Margin="5"
+                        HorizontalAlignment="Right"
+                        Text="{Binding FilterTekst, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                    <Button Command="{Binding cmdFilter}" Cursor="Hand">
+                        <Button.Template>
+                            <ControlTemplate>
+                                <Border Background="{StaticResource myBackground}">
+
+                                    <Path
+                                        Width="20"
+                                        Height="20"
+                                        Margin="5"
+                                        Data="{StaticResource myFilterButton}"
+                                        Fill="{StaticResource myTitleBar}"
+                                        Stretch="Fill" />
+
+                                </Border>
+                            </ControlTemplate>
+                        </Button.Template>
+                    </Button>
+                </StackPanel>
 
                 <ListBox
-                Name="BudgetCategorieListView"
-                Grid.Row="1"
-                Grid.RowSpan="5"
-                Grid.Column="1"
-                Width="150"
-                Margin="5"
-                Foreground="#024f87"
-                ItemsSource="{Binding MijnCollectie}"
-                SelectedIndex="{Binding MijnSelectedItem.MijnSelectedIndex, Mode=Twoway}"
-                SelectedItem="{Binding MijnSelectedItem, UpdateSourceTrigger=PropertyChanged}" />
+                    Name="BudgetCategorieListView"
+                    Grid.Row="2"
+                    Grid.RowSpan="5"
+                    Grid.Column="1"
+                    Width="150"
+                    Margin="5"
+                    HorizontalAlignment="Left"
+                    Foreground="#024f87"
+                    ItemsSource="{Binding GefilterdeCollectie}"
+                    SelectedItem="{Binding MijnSelectedItem, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
 
                 <Label
-                Grid.Row="1"
-                Grid.Column="3"
-                HorizontalContentAlignment="Right"
-                Content="Categorie"
-                Foreground="#024f87" />
+                    Grid.Row="2"
+                    Grid.Column="3"
+                    HorizontalContentAlignment="Right"
+                    Content="Categorie"
+                    Foreground="#024f87" />
                 <TextBox
-                x:Name="txtBudgetCategorie"
-                Grid.Row="1"
-                Grid.Column="4"
-                Width="200"
-                Margin="5"
-                Background="White"
-                Foreground="#024f87"
-                Text="{Binding MijnSelectedItem.BudgetCategorie, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" />
+                    x:Name="txtBudgetCategorie"
+                    Grid.Row="2"
+                    Grid.Column="4"
+                    Width="200"
+                    Margin="5"
+                    Background="White"
+                    Foreground="#024f87"
+                    Text="{Binding MijnSelectedItem.BudgetCategorie, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" />
 
 
             </Grid>
